ansible/roles/cluster_config/files/nmaas.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nmaas
  labels:
    name: nmaas
