ansible/roles/cluster_config/files/kube-lego.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-lego-nginx
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-lego
    spec:
      serviceAccount: kube-lego
      containers:
      - name: kube-lego-nginx
        image: jetstack/kube-lego:0.1.3
        imagePullPolicy: Always
        resources:
          limits:
            memory: 200Mi
            cpu: 200m
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-lego-backend
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: kube-lego
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: kube-ingress
      ports:
        - protocol: TCP
          port: 8080
